vlib/v/checker/tests/map_with_result_value_err.vv
fn main() {
  dump(map[string]!string{})
}